# csc299-project

docs/: PatchPractice.md  chat_discussions.md
final_app/: README.md  SUMMARY.md  agents.py  app.py  main.py  pkms.py  storage.py  tasks.py  video.txt
final_app/data/: notes.json  tasks.json
final_app/src/: __init__.py  main.py  utils.py
final_app/src/agents/: openai_agent.py  planner.py  studyagent.py
final_app/src/cli/: commands.py  shell.py
final_app/src/pkms/: notes.py  search.py
final_app/src/storage/: base.py  json_store.py  sqlite_store.py
final_app/src/tasks/: query.py  tasks.py
final_app/tests/: test_agents.py  test_cli.py  test_pkms.py  test_pkms_tasks.py  test_storage.py  test_tasks.py
studybuddy/: README.md  ai_agent.py  main.py  notes_manager.py  tasks_manager.py
task2/: README.md  tasks.json  tasks.py
task3/src/tests/: test_inc.py
task4/: README.md  main.py  pyproject.toml
task4/task4/: pyproject.toml
task4/task4/src/task4/: __init__.py
tasks1/: README.md  tasks.py
tasks3/: README.md  pyproject.toml
tasks3/src/: __init__.py  notes_manager.py  tasks_manager.py
tasks3/src/tasks3/: __init__.py
tasks3/tests/: test_inc.py  test_tasks_manager.py
tasks5/: .gitignore  README.md  pyproject.toml
tasks5/scripts/: run.sh
tasks5/specify/memory/: constitution.md
tasks5/specs/: task-item.spec.md  tasks.spec.md
tasks5/src/: main.py  models.py  task_manager.py  tasks_manager.py  utils.py
tasks5/tests/: test_models.py  test_tasks_manager.py
