[project]
name = "tasks3"
version = "0.1.0"
description = "CSC299 tasks3 project with pytest testing"
readme = "README.md"
authors = [
    { name = "Layali", email = "layalishkokani@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
tasks3 = "tasks3:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
