[project]
name = "task4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Layali", email = "layalishkokani@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
task4 = "task4:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
